--- a/package.json
+++ b/package.json
@@ -1,20 +1,24 @@
 {
-  "name": "nodejs",
+  "name": "jogo-da-velha",
   "version": "1.0.0",
-  "description": "",
+  "description": "Um simples servidor de jogo da velha para aplicar os conhecimentos adquiridos para Javascript, NodeJS e ExpressJs.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node dist/server.js",
+    "dev": "ts-node-dev --ignore-watch node_modules src/server.ts",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "@types/node": "^18.0.6",
-    "body-parse": "^0.1.0",
-    "body-parser": "^1.20.1",
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "node-fetch": "^3.2.6"
+  "devDependencies": {
+    "@tsconfig/node20": "^20.1.4",
+    "@types/express": "^5.0.0",
+    "@types/node": "^22.10.2",
+    "@types/socket.io": "^3.0.1",
+    "express": "^4.21.2",
+    "socket.io": "^4.8.1",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.7.2"
   }
 }
